[package]
name = "envoy-wasm-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.0"
log = "0.4.16"
cfg-if = "1.0.0"
chrono = "0.4.19"
getrandom = { version = "0.2", features = ["js"] }
reqwest-wasm = { version = "0.11.0", features = ["blocking"] }
gloo-net = "0.2.0"